aligning problems fixed

--- a/app/assets/stylesheets/styles/_home.scss
+++ b/app/assets/stylesheets/styles/_home.scss
@@ -30,11 +30,12 @@ html, body {
     display: block;
 }
 .home-video-wrapper {
+    margin-left: -15px;
     height: 107vh;
     width: 100vw;
     top: 50px;
-    margin: auto;
-    margin-right: 5px;
+    //margin: auto;
+    //margin-right: 5px;
     display: flex;
     background-image: linear-gradient(rgba(51,51,51,0.6),rgba(51,51,51,0.6));
 }
